--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <ul class="menu-item">
                 <li> <a class="menu-item-enlace" href="#sobre">Sobre mi</a> </li>
                 <li> <a class="menu-item-enlace" href="#contacto">Contacto</a> </li>
-            <ul>
+                <ul>
         </nav>
 
 
@@ -137,6 +137,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Gráfica Logüi</h2>
                         </div>
                         <div class="modal-body">
@@ -169,6 +173,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Propuesta Órbitas 2018</h2>
                         </div>
                         <div class="modal-body">
@@ -200,6 +208,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Portada El gran Gatsby</h2>
                         </div>
                         <div class="modal-body">
@@ -233,6 +245,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Maillot MRBT</h2>
                         </div>
                         <div class="modal-body">
@@ -261,6 +277,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Flyer Plaguefit</h2>
                         </div>
                         <div class="modal-body">
@@ -314,6 +334,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Ciudad Sanitaria de Jaén</h2>
                         </div>
                         <div class="modal-body">
@@ -354,6 +378,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Magma Wine</h2>
                         </div>
                         <div class="modal-body">
@@ -397,6 +425,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Gráficas la Paz</h2>
                         </div>
                         <div class="modal-body">
@@ -429,6 +461,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Cinesinfin</h2>
                         </div>
                         <div class="modal-body">
@@ -499,6 +535,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Galeria fotográfica</h2>
                         </div>
                         <div class="modal-body">
@@ -531,6 +571,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Colaborador oficial CxM Silvia Lara 2022</h2>
                         </div>
                         <div class="modal-body">
@@ -591,6 +635,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Edicion con Photoshop</h2>
                         </div>
                         <div class="modal-body">
@@ -658,6 +706,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>WTFoto!</h2>
                         </div>
                         <h3 class="texto"><br>Guia de fotografía «<a
@@ -706,6 +758,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Planeta para Órbitas 2018</h2>
                         </div>
                         <div class="modal-body">
@@ -759,6 +815,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Love X-Ray</h2>
                         </div>
                         <div class="modal-body">
@@ -791,6 +851,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Dragon</h2>
                         </div>
                         <div class="modal-body">
@@ -831,6 +895,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
+                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
                             <h2>Tote Bag</h2>
                         </div>
                         <div class="modal-body">
