añadir flechas brandind  y modal branding 5

--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="diseno-2" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
-                                    aria-hidden="true"></i></span>
+                            <!--<span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>-->
                             <h2>Gráfica Logüi</h2>
                         </div>
                         <div class="modal-body">
@@ -173,9 +173,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="diseno-3" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="diseno-1" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Propuesta Órbitas 2018</h2>
                         </div>
@@ -208,9 +208,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="diseno-4" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="diseno-2" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Portada El gran Gatsby</h2>
                         </div>
@@ -245,9 +245,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="diseno-5" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="diseno-3" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Maillot MRBT</h2>
                         </div>
@@ -277,9 +277,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="branding-1" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="diseno-4" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Flyer Plaguefit</h2>
                         </div>
@@ -334,9 +334,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="branding-2" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="diseno-5" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Ciudad Sanitaria de Jaén</h2>
                         </div>
@@ -378,9 +378,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="branding-3" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="branding-1" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Magma Wine</h2>
                         </div>
@@ -425,9 +425,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="branding-4" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="branding-2" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Gráficas la Paz</h2>
                         </div>
@@ -461,9 +461,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="branding-5" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="branding-3" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Cinesinfin</h2>
                         </div>
@@ -495,6 +495,29 @@
                     <img src="/img/fidel-sanchez_branding_5.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
                     <p>Estudiantes de Criminiolgia de Granada </p>
+                </div>
+                <!--the modal branding 5 -->
+                <div id="branding-4" class="modal">
+                    <!--modal content branding 5-->
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <span data-close class="close">&times;</span>
+                            <span data-nav data-open="foto-1" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="branding-4" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
+                            <h2>Cinesinfin</h2>
+                        </div>
+                        <div class="modal-body">
+                            <img src="/img/fidel-sanchez_branding_5-1.jpg" alt="descripcion"
+                                title="titulo de la imagen"> 
+                        </div>
+                        <div class="modal-footer">
+                            <br>
+
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -535,7 +558,7 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="branding-5" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
                             <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
