--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                     <p>Estudiantes de Criminiolgia de Granada </p>
                 </div>
                 <!--the modal branding 5 -->
-                <div id="branding-4" class="modal">
+                <div id="branding-5" class="modal">
                     <!--modal content branding 5-->
                     <div class="modal-content">
 
@@ -511,7 +511,7 @@
                         </div>
                         <div class="modal-body">
                             <img src="/img/fidel-sanchez_branding_5-1.jpg" alt="descripcion"
-                                title="titulo de la imagen"> 
+                                title="titulo de la imagen">
                         </div>
                         <div class="modal-footer">
                             <br>
@@ -558,9 +558,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="branding-5" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="foto-2" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="branding-5" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Galeria fotográfica</h2>
                         </div>
@@ -594,9 +594,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="foto-3" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="foto-1" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Colaborador oficial CxM Silvia Lara 2022</h2>
                         </div>
@@ -658,9 +658,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="foto-4" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="foto-2" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Edicion con Photoshop</h2>
                         </div>
@@ -687,6 +687,30 @@
                     <img src="/img/fidel-sanchez_fotografia_4.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
                     <p>Foto Magma Wine</p>
+                </div>
+                <!--the modal foto 4 -->
+                <div id="foto-4" class="modal">
+                    <!--modal content foto 4-->
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <span data-close class="close">&times;</span>
+                            <span data-nav data-open="3d-1" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="foto-3" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
+                            <h2>Edicion con Photoshop</h2>
+                        </div>
+                        <div class="modal-body">
+
+                            <img src="/img/fidel-sanchez_fotografia_4-1.jpg" alt="descripcion"
+                                title="titulo de la imagen">
+                        </div>
+                        <div class="modal-footer">
+                            <br>
+
+                        </div>
+                    </div>
                 </div>
 
             </div>
@@ -729,9 +753,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="3d-2" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="foto-4" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>WTFoto!</h2>
                         </div>
@@ -761,6 +785,31 @@
                     <img src="/img/fidel-sanchez_3d_2.jpg" alt="descripcion" title="titulo de la imagen" loading="lazy">
                     <p>Cartel BenQ</p>
                 </div>
+                <!--the modal 3d 2 -->
+                <div id="3d-2" class="modal">
+                    <!--modal content 3d 2-->
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <span data-close class="close">&times;</span>
+                            <span data-nav data-open="3d-2" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="foto-4" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
+                            <h2>Cartel BenQ</h2>
+                        </div>
+
+                        <div class="modal-body">
+
+                            <img src="/img/fidel-sanchez_3d_1-1.jpg" alt="descripcion" title="titulo de la imagen">
+
+                        </div>
+                        <div class="modal-footer">
+                            <br>
+
+                        </div>
+                    </div>
+                </div>
 
 
                 <div type="button" data-open="3d-3" class="media-element">
@@ -781,9 +830,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="ilus-1" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="3d-3" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Planeta para Órbitas 2018</h2>
                         </div>
@@ -838,9 +887,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="ilus-2" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="3d-#" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Love X-Ray</h2>
                         </div>
