añadir contador modal header

--- a/index.html
+++ b/index.html
@@ -507,10 +507,10 @@
                                     aria-hidden="true"></i></span>
                             <span data-nav data-open="branding-4" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
-                            <h2>Cinesinfin</h2>
+                            <h2>Estudiantes de Criminiolgia de Granada</h2>
                         </div>
                         <div class="modal-body">
-                            <img src="/img/fidel-sanchez_branding_5-1.jpg" alt="descripcion"
+                            <img src="/img/fidel-sanchez_branding_5.jpg" alt="descripcion"
                                 title="titulo de la imagen">
                         </div>
                         <div class="modal-footer">
