--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body>
+<body class="scroll">
     <header>
         <nav class="header-nav">
             <a class="menu-logo-enlace" href="#inicio"><img class="menu-logo" src="/img/fidel-sanchez_logo.svg"
