eliminar flechas de despiegue del html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div type="button" data-open="diseno-1" class="media-element first-element">
                     <img src="/img/fidel-sanchez_diseno-grafico_1-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="eager">
-                    <p>Gráfica Logüi <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Gráfica Logüi </i></p>
                 </div>
                 <!--the modal diseno 1 -->
                 <div id="diseno-1" class="modal">
@@ -164,7 +164,7 @@
                 <div type="button" data-open="diseno-2" class="media-element">
                     <img src="/img/fidel-sanchez_diseno-grafico_2-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Propuesta Órbitas 2018 <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Propuesta Órbitas 2018 </i></p>
                 </div>
                 <!--the modal diseno 2 -->
                 <div id="diseno-2" class="modal">
@@ -199,7 +199,7 @@
                 <div type="button" data-open="diseno-3" class="media-element">
                     <img src="/img/fidel-sanchez_diseno-grafico_3-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Portada El gran Gatsby <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Portada El gran Gatsby </i></p>
                 </div>
                 <!--the modal diseno 3 -->
                 <div id="diseno-3" class="modal">
@@ -236,7 +236,7 @@
                 <div type="button" data-open="diseno-4" class="media-element">
                     <img src="/img/fidel-sanchez_diseno-grafico_4-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Maillot MRBT<i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Maillot MRBT</i></p>
                 </div>
                 <!--the modal diseno 4 -->
                 <div id="diseno-4" class="modal">
@@ -268,7 +268,7 @@
                 <div type="button" data-open="diseno-5" class="media-element">
                     <img src="/img/fidel-sanchez_diseno-grafico_5-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Flyer Plaguefit<i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Flyer Plaguefit</i></p>
                 </div>
                 <!--the modal diseno 5 -->
                 <div id="diseno-5" class="modal">
@@ -325,7 +325,7 @@
                 <div type="button" data-open="branding-1" class="media-element first-element">
                     <img src="/img/fidel-sanchez_branding_1-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="eager">
-                    <p>Ciudad Sanitaria de Jaén <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Ciudad Sanitaria de Jaén </i></p>
                 </div>
                 <!--the modal branding 1 -->
                 <div id="branding-1" class="modal">
@@ -369,7 +369,7 @@
                 <div type="button" data-open="branding-2" class="media-element">
                     <img src="/img/fidel-sanchez_branding_2-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Magma Wine <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Magma Wine </i></p>
                 </div>
                 <!--the modal branding 2 -->
                 <div id="branding-2" class="modal">
@@ -416,7 +416,7 @@
                 <div type="button" data-open="branding-3" class="media-element">
                     <img src="/img/fidel-sanchez_branding_3-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Gráficas la Paz <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Gráficas la Paz </i></p>
                 </div>
                 <!--the modal branding 3 -->
                 <div id="branding-3" class="modal">
@@ -452,7 +452,7 @@
                 <div type="button" data-open="branding-4" class="media-element">
                     <img src="/img/fidel-sanchez_branding_4-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Cinesinfin <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Cinesinfin </i></p>
                 </div>
                 <!--the modal branding 4 -->
                 <div id="branding-4" class="modal">
@@ -549,7 +549,7 @@
                 <div type="button" data-open="foto-1" class="media-element first-element">
                     <img src="/img/fidel-sanchez_fotografia_1-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="eager">
-                    <p>Galeria fotográfica <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Galeria fotográfica </i></p>
                 </div>
                 <!--the modal foto 1 -->
                 <div id="foto-1" class="modal">
@@ -585,7 +585,7 @@
                 <div type="button" data-open="foto-2" class="media-element">
                     <img src="/img/fidel-sanchez_fotografia_2.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>CxM Silvia Lara 2022 <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>CxM Silvia Lara 2022 </i></p>
                 </div>
                 <!--the modal foto 2 -->
                 <div id="foto-2" class="modal">
@@ -649,7 +649,7 @@
                 <div type="button" data-open="foto-3" class="media-element">
                     <img src="/img/fidel-sanchez_fotografia_3-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Edicion con Photoshop <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Edicion con Photoshop </i></p>
                 </div>
                 <!--the modal foto 3 -->
                 <div id="foto-3" class="modal">
@@ -744,7 +744,7 @@
                 <div type="button" data-open="3d-1" class="media-element first-element">
                     <img src="/img/fidel-sanchez_3d_1-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="eager">
-                    <p>WTFoto! <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>WTFoto! </i></p>
                 </div>
                 <!--the modal 3d 1 -->
                 <div id="3d-1" class="modal">
@@ -846,7 +846,7 @@
                 <div type="button" data-open="3d-4" class="media-element">
                     <img src="/img/fidel-sanchez_3d_4-1.GIF" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Planeta para Órbitas 2018 <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Planeta para Órbitas 2018 </i></p>
                 </div>
                 <!--the modal 3d 4 -->
                 <div id="3d-4" class="modal">
@@ -903,7 +903,7 @@
                 <div type="button" data-open="ilus-1" class="media-element first-element">
                     <img src="/img/fidel-sanchez_ilustracion_1-1.jpg" alt="ilustración amor por rayos x"
                         title="Love X-Ray" loading="eager">
-                    <p>Love X-Ray <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Love X-Ray </i></p>
                 </div>
                 <!--the modal ILUS 1 -->
                 <div id="ilus-1" class="modal">
@@ -939,7 +939,7 @@
                 <div type="button" data-open="ilus-2" class="media-element">
                     <img src="/img/fidel-sanchez_ilustracion_2-1.jpg"
                         alt="ilustración de un dragon custodiando una gema" title="Dragon" loading="lazy">
-                    <p>Dragón <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Dragón </i></p>
                 </div>
                 <!--the modal ilus 2 -->
                 <div id="ilus-2" class="modal">
@@ -982,7 +982,7 @@
                 <div type="button" data-open="ilus-4" class="media-element">
                     <img src="/img/fidel-sanchez_ilustracion_4-1.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
-                    <p>Tote Bag <i class="fas fa-angle-right" aria-hidden="true"></i></p>
+                    <p>Tote Bag </i></p>
                 </div>
                 <!--the modal ilus 4 -->
                 <div id="ilus-4" class="modal">
