arrglar imagenes hsata ilus-2

--- a/index.html
+++ b/index.html
@@ -699,11 +699,11 @@
                                     aria-hidden="true"></i></span>
                             <span data-nav data-open="foto-3" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
-                            <h2>Edicion con Photoshop</h2>
+                            <h2>Foto Magma Wine</h2>
                         </div>
                         <div class="modal-body">
 
-                            <img src="/img/fidel-sanchez_fotografia_4-1.jpg" alt="descripcion"
+                            <img src="/img/fidel-sanchez_fotografia_4.jpg" alt="descripcion"
                                 title="titulo de la imagen">
                         </div>
                         <div class="modal-footer">
