flechas modal terminadas y funcionales

--- a/index.html
+++ b/index.html
@@ -914,7 +914,7 @@
                             <span data-close class="close">&times;</span>
                             <span data-nav data-open="ilus-2" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="3d-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="3d-4" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Love X-Ray</h2>
                         </div>
@@ -948,9 +948,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="ilus-3" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="ilus-1" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Dragon</h2>
                         </div>
@@ -977,6 +977,31 @@
                         loading="lazy">
                     <p>Retrato</p>
                 </div>
+                <!--the modal ilus 3 -->
+                <div id="ilus-3" class="modal">
+                    <!--modal content ilus 3-->
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <span data-close class="close">&times;</span>
+                            <span data-nav data-open="ilus-4" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>
+                            <span data-nav data-open="ilus-3" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
+                            <h2>Retrato</h2>
+                        </div>
+                        <div class="modal-body">
+
+                            <img src="/img/fidel-sanchez_ilustracion_3.jpg" alt="descripcion"
+                                title="titulo de la imagen">
+                            
+                        </div>
+                        <div class="modal-footer">
+                            <br>
+
+                        </div>
+                    </div>
+                </div>
 
 
                 <div type="button" data-open="ilus-4" class="media-element">
@@ -992,9 +1017,9 @@
 
                         <div class="modal-header">
                             <span data-close class="close">&times;</span>
-                            <span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                            <span data-nav data-open="ilus-5" class="next"><i class="fas fa-angle-right"
                                     aria-hidden="true"></i></span>
-                            <span data-nav data-open="#-#" class="previous"><i class="fas fa-angle-left"
+                            <span data-nav data-open="ilus-3" class="previous"><i class="fas fa-angle-left"
                                     aria-hidden="true"></i></span>
                             <h2>Tote Bag</h2>
                         </div>
@@ -1024,6 +1049,31 @@
                     <img src="/img/fidel-sanchez_ilustracion_5.jpg" alt="descripcion" title="titulo de la imagen"
                         loading="lazy">
                     <p>Retrato</p>
+                </div>
+                <!--the modal ilus 5 -->
+                <div id="ilus-5" class="modal">
+                    <!--modal content ilus 5-->
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <span data-close class="close">&times;</span>
+                            <!--<span data-nav data-open="#-#" class="next"><i class="fas fa-angle-right"
+                                    aria-hidden="true"></i></span>-->
+                            <span data-nav data-open="ilus-4" class="previous"><i class="fas fa-angle-left"
+                                    aria-hidden="true"></i></span>
+                            <h2>Retrato</h2>
+                        </div>
+                        <div class="modal-body">
+
+                            <img src="/img/fidel-sanchez_ilustracion_5.jpg" alt="descripcion"
+                                title="titulo de la imagen">
+                            
+                        </div>
+                        <div class="modal-footer">
+                            <br>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
