--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </head>
 
-<body  id="scroll" class="scroll">
+<body id="scroll" class="scroll">
     <header>
         <nav class="header-nav">
             <a class="menu-logo-enlace" href="#inicio"><img class="menu-logo" src="/img/fidel-sanchez_logo.svg"
@@ -510,8 +510,7 @@
                             <h2>Estudiantes de Criminiolgia de Granada</h2>
                         </div>
                         <div class="modal-body">
-                            <img src="/img/fidel-sanchez_branding_5.jpg" alt="descripcion"
-                                title="titulo de la imagen">
+                            <img src="/img/fidel-sanchez_branding_5.jpg" alt="descripcion" title="titulo de la imagen">
                         </div>
                         <div class="modal-footer">
                             <br>
@@ -994,7 +993,7 @@
 
                             <img src="/img/fidel-sanchez_ilustracion_3.jpg" alt="descripcion"
                                 title="titulo de la imagen">
-                            
+
                         </div>
                         <div class="modal-footer">
                             <br>
@@ -1067,7 +1066,7 @@
 
                             <img src="/img/fidel-sanchez_ilustracion_5.jpg" alt="descripcion"
                                 title="titulo de la imagen">
-                            
+
                         </div>
                         <div class="modal-footer">
                             <br>
