añadir año automatico con js

--- a/index.html
+++ b/index.html
@@ -1219,7 +1219,7 @@
                 <i class="fab fa-twitter" aria-hidden="true"></i></a>
         </section>
 
-        <p>web handcrafted by me! &copy Fidel Sánchez 2023</p>
+        <p>web handcrafted by me! &copy Fidel Sánchez <script>document.write(new Date().getFullYear())</script></p>
 
     </footer>
 
