chanche the sobre my picture and texts

--- a/index.html
+++ b/index.html
@@ -1164,25 +1164,18 @@
 
             <div class="texto">
                 <p>Hola!</p>
-                Soy Fidel, encantado de conocerte, bienvenido a este pequeño rinconcito que espero encuentres
-                interesante,
-                en el cual hay una pequeña muestra de lo que hago y poco a poco irá creciendo.</p>
+                Soy Fidel, un diseñador gráfico diestro en la creación de composiciones visuales atractivas utilizando tipografías,
+                imágenes e ilustraciones. Una persona motivada que se enorgullece de crear diseños gráficos destacables,
+                mediante diferentes habilidades creativas. Acostumbrado a colaborar con otros profesionales afines para
+                alcanzar los objetivos marcados.</p>
 
-                Si tienes curiosidad, soy un mozuelo del 93, que ha cursando los Estudios Artísticos Superiores, (EAS
-                para los amigos)
-                en la especialidad de Diseño Gráfico, previamente realicé un grado medio que me certifica
-                como Artefinalista y antes de eso… digamos que era de ciencias.</p>
+                <i lang="en">Hi!</p>
 
-                <i lang="en">Hey there!</p>
-
-                    My name is Fidel, nice to meet you, welcome to this little place of mine.
-                    I hope you find interesting this little sample of my work.</p>
-
-                    If you are curious I’m a 93’s stripling, who had studied a University Degree in Graphic Design,
-                    perviously I made Vocational Education and Training in Graphic Design’s Final Artwork Production,
-                    and
-                    before that…
-                    let’s say I was in science.</i>
+                    I'm Fidel, a skilled Graphic Designer adept in creating powerful visual designs
+                    using
+                    digital illustrations, images, and typography. A self-motivated individual who takes pride in
+                    creating compelling graphic designs, in addition to other creative skills. Accustomed to
+                    collaborating with other creative professionals to achieve project goals.</i>
                 </p>
                 </di>
 
@@ -1219,7 +1212,9 @@
                 <i class="fab fa-twitter" aria-hidden="true"></i></a>
         </section>
 
-        <p>web handcrafted by me! &copy Fidel Sánchez <script>document.write(new Date().getFullYear())</script></p>
+        <p>web handcrafted by me! &copy Fidel Sánchez
+            <script>document.write(new Date().getFullYear())</script>
+        </p>
 
     </footer>
 
