dark mode, unified colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Fidel Sanchez Porfolio </title>
     <meta name="description"
         content="Graphic Designer & Latheral Thinker | Diseño gráfico, Branding, Fotografia, 3D, Ilustración y Motion graphics.">
-    <meta name="theme-color" content="lightblue">
+    <meta name="theme-color" content="black">
     <link rel="canonical" href="https://fidelsanchez.com">
     <link rel="icon" type="image/x-icon" href="/img/fidel-sanchez_favicon.svg">
     <link rel="stylesheet" href="/css/styles.css">
@@ -1163,22 +1163,20 @@
                 title="foto de perfil">
 
             <div class="texto">
-                <p>Hola!</p>
+                <p>Hola!<br>
                 Soy Fidel, un diseñador gráfico diestro en la creación de composiciones visuales atractivas utilizando tipografías,
                 imágenes e ilustraciones. Una persona motivada que se enorgullece de crear diseños gráficos destacables,
                 mediante diferentes habilidades creativas. Acostumbrado a colaborar con otros profesionales afines para
-                alcanzar los objetivos marcados.</p>
-
-                <i lang="en">Hi!</p>
+                alcanzar los objetivos marcados.<br>
+                <br><br>
+                <i lang="en">Hi!<br>
 
                     I'm Fidel, a skilled Graphic Designer adept in creating powerful visual designs
                     using
                     digital illustrations, images, and typography. A self-motivated individual who takes pride in
                     creating compelling graphic designs, in addition to other creative skills. Accustomed to
                     collaborating with other creative professionals to achieve project goals.</i>
-                </p>
-                </di>
-
+                </p>            
             </div>
     </section>
 
